[package]
name = "mel-dl"
version = "0.1.0"
authors = ["Xavier Ang <xaveang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.25.1"
thirtyfour_query = "0.7.0"
tokio = "1.7.1"
async-trait = "0.1.50"
serde_json = "1.0.64"
futures = "0.3.15"
stringmatch = "0.3.0"