[package]
authors = ["Xavier Ang <xaveang@gmail.com>"]
edition = "2018"
name = "mel-dl"
version = "0.11.0"

[dependencies]
async-trait = "0.1.50"
clap = "2.3.3"
futures = "0.3.15"
regex = "1.5.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
stringmatch = "0.3.0"
thirtyfour = "0.25.1"
thirtyfour_query = "0.7.0"
tokio = "1.7.1"
toml = "0.5.8"
